Hudson legyen mégboldogabb:  * equals() és hachCode() implementációk finomítása  * resourceok lezárása  * new Long() helyett Long.valueOf()  * new String(String) helyett csak simán String